--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div id="container">
+    <div id="navigation">
+      <%= link_to "Server List", servers_path, class: "button button-gray" %>
+    </div>
+    <% flash.each do |key,value| %>
+      <p class="flash-<%= key %>"><%= value %></p>
+    <% end %>
 
-<%= yield %>
-
+    <%= yield %>
+  </div>
 </body>
 </html>
