--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <div id="container">
     <div id="navigation">
       <%= link_to "Server List", servers_path, class: "button button-gray" %>
+      <%= link_to "Images List", images_path, class: "button button-gray" %>
     </div>
     <% flash.each do |key,value| %>
       <p class="flash-<%= key %>"><%= value %></p>
